  :func:`~werkzeug.serving.make_ssl_devcert` to fail with an exception.
- Added exceptions for 504 and 505.
- Added support for ChromeOS detection.
- Added UUID converter to the routing system.
- Added message that explains how to quit the server.
- Fixed a bug on Python 2, that caused ``len`` for 
  :class:`werkzeug.datastructures.CombinedMultiDict` to crash.

Version 0.9.5
-------------

(bugfix release, release date to be decided)

- Forward charset argument from request objects to the environ
  builder.
- Fixed error handling for missing boundaries in multipart data.
- Fixed session creation on systems without ``os.urandom()``.
- Fixed pluses in dictionary keys not being properly URL encoded.
- Fixed a problem with deepcopy not working for multi dicts.
- Fixed a double quoting issue on redirects.
- Fixed a problem with unicode keys appearing in headers on 2.x.

Version 0.9.4
-------------

(bugfix release, released on August 26th 2013)

- Fixed an issue with Python 3.3 and an edge case in cookie parsing.
- Fixed decoding errors not handled properly through the WSGI
  decoding dance.
- Fixed URI to IRI conversion incorrectly decoding percent signs.

Version 0.9.3
-------------

(bugfix release, released on July 25th 2013)

- Restored behavior of the ``data`` descriptor of the request class to pre 0.9
  behavior.  This now also means that ``.data`` and ``.get_data()`` have
  different behavior.  New code should use ``.get_data()`` always.

  In addition to that there is now a flag for the ``.get_data()`` method that
  controls what should happen with form data parsing and the form parser will
  honor cached data.  This makes dealing with custom form data more consistent.

Version 0.9.2
-------------

(bugfix release, released on July 18th 2013)

- Added `unsafe` parameter to :func:`~werkzeug.urls.url_quote`.
- Fixed an issue with :func:`~werkzeug.urls.url_quote_plus` not quoting
  `'+'` correctly.